--- a/style.css
+++ b/style.css
@@ -275,5 +275,17 @@
           width: 80%;
           margin-left: 20%;
          }
-   
+         .babysitter-profile{
+          float: left;
+          width: 29%;
+          padding: 10px;
+          height: 300px;
+          text-align: center;
+          border:solid 9px rgb(196, 232, 243);
+          background-color:rgb(255, 255, 255);
+          margin-left: 12px;
+        margin-top: 30px;
+         
+        
+        }
  
