--- a/style.css
+++ b/style.css
@@ -146,7 +146,19 @@
   margin-left: 70%;
   text-align: left;
   position: relative;
-  bottom: 450px;}
+  bottom: 350px;}
+  .BabysitterPhoto{
+    background: #fff;
+    border: 5px solid #5fb3bd;
+    border-radius: 4px;
+    height: 150px;
+    padding: 15px 15px 15px 15px;
+    position: relative;
+    width: 20%;
+  margin-left: 70%;
+  text-align: left;
+  position: relative;
+  bottom: 967px;}
   
 
  .workDays h2 ,.workDaysBabysitter h2{
@@ -313,6 +325,13 @@
           width: 80%;
           margin-left: 20%;
          }
+         .Accept-and-reject-request-button{
+          width: 400px;
+          margin-left: 400px;
+          position: relative;
+          bottom: 500px;
+         
+         }
          .babysitter-profile{
           float: left;
           width: 29%;
@@ -324,6 +343,7 @@
           margin-left: 12px;
         margin-top: 30px;
         }
+        
         .details-button{
           display: inline-block;
        background-color:  rgb(196, 232, 243);
