--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@
    width: 30%;
    margin-left: 5%;
    background: #7dcad6;
-     border: 5px solid #78b2b8;
+    border: 5px solid #78b2b8;
    text-align: center;
    padding: 0 0;
    position: relative;
@@ -299,6 +299,13 @@
        height: 40px}
      .details-button:hover{
          background-color: rgb(135, 145, 159);  }
+      .home-page-border{
+      border-radius: 15px;
+      border-color: rgb(121, 199, 232);
+      margin-top: 50px;
+      }
+  
+
 
         
  
