--- a/Rating.css
+++ b/Rating.css
@@ -130,12 +130,20 @@ height: 40px;
  h1.thank-you{
   position: absolute;
   top: 40% ;
-  left: 46%; 
+  left: 45%; 
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+     font-style: italic;
+     text-align: center;
+     color: rgb(2, 2, 38);
  }
 
- h3.submitted{
+ h2.submitted-thank{
   position: absolute;
-  top: 59% ;
-  left: 46%;
-
+  top: 45% ;
+  left: 30%;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-style: italic;
+  text-align: center;
+  color: rgb(2, 2, 38);
  }
+
