--- a/style.css
+++ b/style.css
@@ -397,8 +397,36 @@
       }
       #logo{
         float:left;
+        padding:1px 0 1px 5px;
+      }
+      #logo h3{
+        color:#062454;
+        font-family: tahoma;
+        font-size: 20px;
+        cursor:pointer;
       }
       nav ul{
+        list-style: none;
         float:right;
+        display: flex;
+        height: 60px;
+        align-items:center;
+        justify-items: center;
+        margin-right:45px;
+
+      }
+      nav ul li{
+        padding-top:0px;
+
+      }
+      nav ul li a{
+        text-decoration:none;
+        color:#5f5c5c;
+        font-size:13px;
+        font-family:monospace ;
+        transition: .3s ease-out;
+      }
+      nav ul li a:hover{
+        color:#000000;
       }
  
