--- a/main.css
+++ b/main.css
@@ -6,51 +6,80 @@
     background-origin: border-box;
     background-position-y: 0%;
   }
+
+
+  h1.menu{
+    position: absolute;
+    top: 0%;  
+    left:3%;
+  }
   .homePage{
-color: #062454;
- text-align: center;
- font-size: 20px;
- padding: 2px;
- width: 150px;
- height: 40px;
+
+    position: absolute;
+    top: 40%;  
+    left:50%;
+    color: #062454;
+     text-align: center;
+     font-size: 20px;
+     padding: 2px;
+     width: 150px;
+     height: 40px;
+      }
+ 
+ 
+  
+  
+  .navig{
+    margin : 0;
+    padding: 3px;
   }
   
-  header{
-  width:100%;
-  height:60px;
-  background-color: #d1dcff;
-}
-#logo{
-  float:left;
-  padding:1px 0 1px 5px;
-}
-#logo h3{
-  color:#062454;
-  font-family: tahoma;
-  font-size: 20px;
-  cursor:pointer;
-}
-nav ul{
-  list-style: none;
-  float:right;
-  display: flex;
-  height: 60px;
+  .ul-style{
+   
+text-indent: 7%;
+      list-style: none;
+      background-color: white;
+
+  height: 45px;
   align-items:center;
-  justify-items: center;
-  margin-right:45px;
+  
+ 
+  }
 
-}
-nav ul li{
-  padding-top:0px;
+  nav ul li{
+    display:inline;
 
-}
-nav ul li a{
-  text-decoration:none;
-  color:#5f5c5c;
-  font-size:13px;
-  font-family:monospace ;
-  transition: .3s ease-out;
-}
-nav ul li a:hover{
-  color:#000000;
-}
+      Line-height:20px; 
+  
+  }
+  nav ul li a{
+    text-decoration:none;
+    color:#5f5c5c;
+    font-size:  17px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   padding:1%;
+  }
+  nav ul li a:hover{
+    color:blue;
+  } 
+  
+
+  
+  .details-buttonn{
+    display: inline-block;
+       background-color:  rgb(196, 232, 243);
+       border-radius: 10px;
+       border: 4px double #000000;
+       color: #000000;
+       text-align: center;
+       font-size: 15px;
+       padding: 2px;
+       width: 150px;
+       height: 40px}
+  
+  .details-button:hover{
+   background-color: rgb(135, 145, 159);  }
+  
+  
+  
+ 
