--- a/main.css
+++ b/main.css
@@ -76,6 +76,12 @@
   
   .details-button:hover{
    background-color: rgb(135, 145, 159);  }
+   .footer{
+    text-align: center;
+    background-color: #ffffff;
+    height: 80px;
+    
+  }
   
   
   
