--- a/booking.css
+++ b/booking.css
@@ -12,3 +12,16 @@
   .tableBooking a{
     text-decoration: none;
   }
+  .status-button{
+ display: inline-block;
+ border-radius: 10px;
+ border: 4px double #000000;
+ color: #000000;
+ text-align: center;
+ font-size: 15px;
+ padding: 2px;
+ width: 150px;
+ height: 40px;
+ 
+
+}
