--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@
          background-image: url(../web-project/watercolor-cloud-pattern-background-2-1.jpg);}
         .signUp{
           width: 44%;
-         margin-top: 5%;
+         margin-top: 10%;
          margin-bottom:5% ;
           margin-left:28% ;
           padding: 10px;
@@ -343,7 +343,7 @@
           
            }
           .footer{
-            position: fixed;
+            position:sticky;
             top: 85%;
             width: 100%;
             height: 100px;
