--- a/style.css
+++ b/style.css
@@ -333,8 +333,7 @@
          background-image: url(../web-project/watercolor-cloud-pattern-background-2-1.jpg);}
         .signUp{
           width: 44%;
-         margin-top: 10%;
-         margin-bottom:5% ;
+        
           margin-left:28% ;
           padding: 10px;
           text-align: center;
@@ -349,6 +348,15 @@
             height: 100px;
             text-align: center;
             background-color: #ffffff;}
+            .footermine{
+              position:fixed;
+              top: 85%;
+              width: 100%;
+              height: 100px;
+              text-align: center;
+              background-color: #ffffff;
+
+            }
          
           
       
