--- a/style.css
+++ b/style.css
@@ -44,10 +44,11 @@
      color: #354057;
      font-size: 20px;
      margin: 0;
-     padding: 10px 0 0 ;
-    
- 
-   }
+     padding: 10px 0 0 ;}
+    .kids-info{
+text-align: center;
+    }
+   
    .kids-info h2 , .babysitter-info h2 {
      padding-top: 0%;
      padding-right: 0%;
