--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
    }
   .job-request-page{
      text-align: left;
-     background-color: aliceblue;
+     background-color: rgb(255, 255, 255);
      width: 50%;
      margin-left: 25%;}
    
