--- a/main.css
+++ b/main.css
@@ -83,6 +83,20 @@
     height: 80px;
     
   }
+
+  .button-cancel{
+    display: inline-block;
+ background-color:  rgb(196, 232, 243);
+ border-radius: 10px;
+ border: 4px double #000000;
+ color: #000000;
+ text-align: center;
+ font-size: 15px;
+ padding: 2px;
+ width: 150px;
+ height: 40px}
+.button-cancel:hover{
+   background-color: rgb(218, 26, 26);  }
   
   
   
