--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     float: right;
     padding: 0%}
    .background{
-     background-image: url(../web-project/watercolor-cloud-pattern-background-2-1.jpg);}
+     background-image: url("../web-project/watercolor-cloud-pattern-background-2-1.jpg");}
    .background h1{
      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      font-style: italic;
